*** Unreleased ***
- Enhancements
- Fixes
- Plumbing

*** Version 21.10.04       (2022-04-29)   ***
- Fixes
Set selected agent id in recup_pose.php
Force absences/holidays end hours to 23:59:59
DB update, tranform working hours like 00:00:00 to ''
Show agent's name in absence form even if he is deleted
Remove hours transformation in function calculSiPresent
Correctly hide and show drop, import and print icones in the Planning menu
Ignore params EDTSamedi if PlanningHebdo is enabled
Do not publish crossed-out agents on ICS calendars
Conditionally get hre_* (for holiday information) Fix overtime form elements
Decode statuses and services of agents
Don't send planning's notification to unavailables agents
Holiday information : remove HTML entities and display information dates

- Enhancements
Allow empty values in planno timepicker

- Plumbing
Make installer set APP_ENV=prod


*** Version 21.10.03       (2022-04-21)   ***
- Fixes
Disable setting EDTSamedi if PlanningHebdo is enabled

*** Version 21.10.02       (2022-04-15)   ***
- Enhancements
Optimize DB queries for holiday/credits
Allow to load absences without documents for performance improvement

- Fixes
Prevent Hours helper to convert non H:i values
get disabled cells in public/planning/poste/semaine.php

- Plumbing

*** Version 21.10.01       (2022-03-18)   ***
- Enhancements
Ability to change login in agent's form
Add a div with class=attendance to isolate attendance information on calendars
Allow edition of imported working hours
Restrict absences list interval to a year maximum
Display disabled planno-break-timepickers in black

- Fixes
Don't apply compensatory time on... compensatory time
Initialize the widget calendar with the asked date when using the week view
Fix display of html entities on information and absence information messages
Restore "All sites" option in working hours
Fix HTML entities in floors and groups dropdown menus (position's form)
Always set absence hours like h:m:s